<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kroeber</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="select_device">2. Please select your device</string>
    <string name="scan_for_devices">Scan</string>
    <string name="configure">Configure fountain</string>
    <string name="personalize">3. Personalize Kroeber Fountain</string>
    <string name="personalize_kroeber">Personalize Kroeber Fountain</string>
    <string name="scan_device">Scan for your device for fountain personalization</string>
    <string name="select_text">2. Please select your device from the menu below</string>
    <string name="step1">1. Scan for devices</string>
    <string name="choose_color">Choose a color or pattern</string>
    <string name="flash">Flash</string>
    <string name="strobe">Strobe</string>
    <string name="fade">Fade</string>
    <string name="smooth">Smooth</string>
    <string name="height">Height</string>
    <string name="frequency">Frequency</string>
    <string name="submit">Submit</string>

</resources>