<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
        android:padding="40dp"
        android:background="#F0F8FF"
        >

    <TextView
        android:id="@+id/select_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_device"
        android:fontFamily="sans-serif-thin"
        android:textSize="40dp"
        android:textColor="@color/bB_blue"
        android:layout_margin="50dp"
            />

    <TextView
            android:id="@+id/Step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_device"
            android:text="@string/step1"
            android:textSize="30dp"
            android:textColor="@color/blue"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />

    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_for_devices"
            android:layout_below="@+id/Step1"
            android:fontFamily="bold"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:padding="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"/>




    <TextView
            android:id="@+id/select_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:text="@string/select_text"
            android:textSize="30dp"
            android:textColor="@color/blue"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_spinner"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="#F0F8FF"
        />

    <TextView
            android:id="@+id/step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spin"
            android:text="@string/personalize"
            android:textSize="30dp"
            android:textColor="@color/blue"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />


    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure"
            android:layout_below="@+id/step3"
            android:fontFamily="bold"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="50dp"/>



</RelativeLayout>